--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "echarts": "^4.4.0",
+    "moment": "^2.24.0",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -39,7 +42,7 @@
     "rules": {
       "no-console": "off"
     },
-      "parserOptions": {
+    "parserOptions": {
       "parser": "babel-eslint"
     }
   },
